--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,13 +1,11 @@
 steps:
-  - name: ':docker: builder + push'
-    command: .buildkite/build.sh
-    branches: master
+  - name: ":github: create release (tag pushed)"
+    command: .buildkite/release.sh
+    branches: v*.* # tags
   - wait
   - name: ":ec2: kubernetes deploy"
     command: .buildkite/deploy.sh
-    branches: master
+    branches: v*.*
     agents:
       queue: deploy
       kubernetes: true
-  - name: ":github: create release"
-    command: .buildkite/release.sh
