--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,6 @@ FROM golang:1.7
 
 COPY . /go/src/github.com/superfly/wormhole
 
-RUN go get github.com/itang/gohttp &&\
-    go install github.com/itang/gohttp
+RUN go get github.com/valyala/fasthttp
 
 ENTRYPOINT ["go", "run", "/go/src/github.com/superfly/wormhole/cmd/wormhole/main.go"]
