hook testing in buildkite

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,4 +1,6 @@
 steps:
+  - name: ":golang: tests"
+    command: .buildkite/test.sh
   - name: ":golang: compile binaries"
     command: .buildkite/build.sh
   - wait
