--- a/glide.yaml
+++ b/glide.yaml
@@ -19,3 +19,5 @@ import:
 - package: github.com/Shopify/logrus-bugsnag
 - package: github.com/bugsnag/bugsnag-go
   version: ^1.1.1
+testImport:
+- package: github.com/alicebob/miniredis
