--- a/glide.yaml
+++ b/glide.yaml
@@ -11,7 +11,7 @@ import:
 - package: github.com/rs/xid
 - package: github.com/klauspost/cpuid
   version: ~1.0.0
-- package: srcd.works/go-git.v4
+- package: gopkg.in/src-d/go-git.v4
   version: v4
   repo: git@github.com:src-d/go-git.git
   vcs: git
