add rate-limiting to the ssh handler
- set at 240 connection attempts per hour for now

--- a/glide.yaml
+++ b/glide.yaml
@@ -21,5 +21,6 @@ import:
   version: ^0.8.0
   subpackages:
   - prometheus
+- package: github.com/ulule/limiter
 testImport:
 - package: github.com/alicebob/miniredis
