--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ go:
   - 1.7.x
   - 1.x
 
-env:
-  - GIMME_OS=linux GIMME_ARCH=amd64
-  - GIMME_OS=linux GIMME_ARCH=arm
-  - GIMME_OS=darwin GIMME_ARCH=amd64
-  - GIMME_OS=windows GIMME_ARCH=amd64
-
 install: make setup
-script: make ci
+script:
+  # check compilation on supported targets
+  - GOARCH=linux   GOOS=amd64 make binaries
+  - GOARCH=windows GOOS=amd64 make binaries
+  - GOARCH=darwin  GOOS=amd64 make binaries
+  - GOARCH=linux   GOOS=arm make binaries
+  - GOARCH=linux   GOOS=386 make binaries
+  # run tests
+  - make ci
