--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: go
-go:
-- 1.8.x
-- 1.x
+matrix:
+  include:
+    - go: '1.8.x'
+      env: BUILD_UPLOAD=false
+    - go: '1.9.x'
+      env: BUILD_UPLOAD=true
 install: make setup
 sudo: required
 services:
