--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ matrix:
     - go: '1.8.x'
       env: BUILD_UPLOAD=false
     - go: '1.9.x'
+      env: BUILD_UPLOAD=false
+    - go: '1.10.x'
       env: BUILD_UPLOAD=true
 install: make setup
 sudo: required
