--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: go
 matrix:
   include:
-    - go: '1.8.x'
-      env: BUILD_UPLOAD=false
-    - go: '1.9.x'
-      env: BUILD_UPLOAD=false
+    # - go: '1.8.x'
+    #   env: BUILD_UPLOAD=false
+    # - go: '1.9.x'
+    #   env: BUILD_UPLOAD=false
     - go: '1.10.x'
       env: BUILD_UPLOAD=true
 install: make setup
