--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM golang:1.7
 
-COPY . /go/src/github.com/superfly/wormhole
+COPY . /go/src/github.com/oknoah/wormhole
 
 RUN go get github.com/valyala/fasthttp
 
-ENTRYPOINT ["go", "run", "/go/src/github.com/superfly/wormhole/cmd/wormhole/main.go"]
+ENTRYPOINT ["go", "run", "/go/src/github.com/oknoah/wormhole/cmd/wormhole/main.go"]
