--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,10 +34,6 @@
   version = "1.1.1"
 
 [[constraint]]
-  name = "github.com/garyburd/redigo"
-  version = "~1.0.0"
-
-[[constraint]]
   name = "github.com/go-test/deep"
   version = "1.0.0"
 
@@ -80,3 +76,15 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/go-chi/chi"
+  version = "3.3.2"
+
+[[constraint]]
+  name = "github.com/rafaeljusto/redigomock"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/gomodule/redigo"
+  version = "2.0.0"
