--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -84,3 +84,6 @@
 [[constraint]]
   name = "github.com/gomodule/redigo"
   version = "2.0.0"
+[[constraint]]
+  name = "github.com/soheilhy/cmux"
+  version = "0.1.4"
